--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-=== USAGE
+USAGE
 
 To display trades from all the exchanges Bitcoincharts monitors:
     trades
@@ -8,6 +8,6 @@ sure you use the same name that Bitcoincharts uses. The arguments are
 case-insensitive and you can specify as many as you want.
     trades mtgoxUSD thusd
 
-=== Data
+Data
 
 All data is provided by Bitcoincharts.com, via their telnet API socket thing.
